crates/sui-graphql-macros/tests/compile/tuple_struct_not_supported.stderr
error: Unsupported shape `unnamed fields`. Expected named fields.
 --> tests/compile/tuple_struct_not_supported.rs:3:10
  |
3 | #[derive(Response)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Response` (in Nightly builds, run with -Z macro-backtrace for more info)
