crates/sui-graphql-macros/tests/compile/tuple_struct_not_supported.rs
use sui_graphql_macros::Response;

#[derive(Response)]
struct TupleStruct(String, u64);

fn main() {}
